--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,8 @@
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #150e60;
+  --light-background: #cfe6ff;
+  --dark-background: #473dc6;
 }
 
 html,
@@ -13,9 +15,9 @@ body {
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: var(--font-agrandir-regular);
 }
 
 * {
@@ -56,14 +58,28 @@ a {
   flex-direction: row;
   gap: 10px;
   align-items: center;
+  text-transform: uppercase;
+  font-weight: 700;
+  letter-spacing: 1px;
 }
 
-#header:first-child {
+#header div:first-of-type {
   margin-right: auto;
 }
 
-#header:last-child {
+#header div:last-of-type {
   margin-left: auto;
+  justify-content: space-between;
+  padding: 0 10px;
+}
+
+#header div a {
+  transition: letter-spacing 250ms;
+}
+
+#header div a:hover {
+  letter-spacing: 2px;
+  cursor: pointer;
 }
 
 #footer {
@@ -93,4 +109,20 @@ a {
 #footer:last-child {
   margin-left: auto;
   font-weight: 700;
+}
+
+button {
+  padding: 10px;
+  background-color: transparent;
+  border: var(--foreground) 5px;
+  color: var(--foreground);
+  border-radius: 50px;
+  transition: background-color 250ms, color 250ms;
+}
+
+button:hover,
+button:focus {
+  background-color: var(--foreground);
+  color: var(--background);
+  cursor: pointer;
 }
