Switch fonts and add hamburger

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -29,14 +29,15 @@
   z-index: 5;
   pointer-events: none;
   position: absolute;
+  opacity: 0.6;
 }
 
 #hero div {
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-size: 7vw;
-  font-family: var(--font-agrandir-bold);
+  font-size: 12vw;
+  font-family: var(--font-coolvetica-reg);
   height: fit-content;
   z-index: 999;
 }
@@ -44,28 +45,30 @@
 #hero div h1 {
   margin-bottom: 0;
   height: fit-content;
-  line-height: 12vw;
+  line-height: 15vw;
   opacity: 0;
   transform: translateY(100px);
+  font-weight: lighter;
+  font-family: var(-reg-font-coolvetica-);
 }
 
 @media (min-width: 1000px) {
   #hero div {
-    font-size: 70px;
+    font-size: 120px;
   }
 
   #hero div h1 {
-    line-height: 120px;
+    line-height: 140px;
   }
 }
 
-@media (max-width: 440px) {
+@media (max-width: 350px) {
   #hero div {
-    font-size: 30px;
+    font-size: 45px;
   }
 
   #hero div h1 {
-    line-height: 50px;
+    line-height: 55px;
   }
 }
 
@@ -83,7 +86,7 @@
   color: white;
   border: solid white 3px;
   border-radius: 50px;
-  font-size: 20px;
+  font-size: 17px;
   padding: 15px 50px;
   z-index: 999;
 }
@@ -91,11 +94,11 @@
 #hero button:hover,
 #hero button:focus {
   background-color: white;
-  color: #4949de;
+  color: #0e5fe1;
 }
 
 #about {
-  color: #0721b3;
+  color: #0e5fe1;
   display: flex;
   flex-direction: column;
   align-items: center;
