--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,7 +17,7 @@ body {
   background: var(--background);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: var(--font-agrandir-regular);
+  font-family: var(--font-coolvetica-regCond);
 }
 
 * {
@@ -55,11 +55,13 @@ a {
   width: 100%;
   display: flex;
   flex-direction: row;
-  gap: 10px;
+  gap: 30px;
   align-items: center;
   text-transform: uppercase;
-  font-weight: 700;
-  letter-spacing: 1px;
+  font-weight: 500;
+  font-size: 18px;
+  letter-spacing: 2px;
+  font-family: var(--font-coolvetica-reg);
 }
 
 #header div img {
@@ -75,15 +77,17 @@ a {
   margin-left: auto;
   justify-content: space-between;
   padding-right: 10px;
-  min-width: 700px;
+  min-width: fit-content;
 }
 
 #header div a {
+  margin: auto 0;
+  text-align: center;
   transition: letter-spacing 250ms;
 }
 
 #header div a:hover {
-  letter-spacing: 2px;
+  letter-spacing: 3px;
   cursor: pointer;
 }
 
@@ -130,6 +134,59 @@ button:focus {
   background-color: var(--foreground);
   color: var(--background);
   cursor: pointer;
+}
+
+#hamburger {
+  padding: 7px;
+  margin: 0;
+  position: fixed;
+  top: 0;
+  right: 0;
+}
+
+#hamburgerIcon {
+  height: 3em;
+  transition: transform 600ms cubic-bezier(0.4, 0, 0.2, 1);
+  float: right;
+  margin-left: auto;
+  color: #135ee0; 
+  mix-blend-mode: difference;
+}
+
+#hamburgerIcon input {
+  display: none;
+}
+
+#hamburgerIcon svg {
+  height: 3em;
+  transition: transform 600ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+#hamburgerIcon:hover {
+  cursor: pointer;
+}
+
+.line {
+  fill: none;
+  stroke: white;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-width: 3;
+  transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
+              stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.line-top-bottom {
+  stroke-dasharray: 12 63;
+}
+
+#hamburgerIcon input:checked + svg {
+  transform: rotate(-45deg);
+}
+
+#hamburgerIcon input:checked + svg .line-top-bottom {
+  stroke-dasharray: 20 300;
+  stroke-dashoffset: -32.42;
 }
 
 @keyframes textIn {
