--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -4,8 +4,8 @@
   align-items: center;
   justify-content: space-evenly;
   flex-direction: column;
-  height: 100dvh;
-  max-height: 750px;
+  height: calc(100dvh - 50px);
+  /* max-height: 1750px; */
   background: rgb(55,52,198);
   background: -moz-linear-gradient(150deg, #2d55d9 0%, #2d56d6 100%);
   background: -webkit-linear-gradient(150deg, #2d55d9 0%, #2d56d6 100%);
@@ -19,9 +19,9 @@
   position: relative;
 }
 
-@media (max-width: 750px) {
+@media (max-width: 1180px) {
   #hero {
-    background-size: 750px;
+    background-size: 1180px;
   }
 }
 
@@ -31,11 +31,18 @@
   position: absolute;
   opacity: 0.6;
   width: 100vw;
+  filter: blur(5px);
 }
 
-@media (max-width: 850px) {
+@media (max-width: 1180px) {
   #hero video {
-    width: 850px;
+    width: 1180px;
+  }
+}
+
+@media (min-height: 2000px) {
+  #hero video {
+    width: 100dvh;
   }
 }
 
