--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -31,7 +31,8 @@
   position: absolute;
   opacity: 0.6;
   width: 100vw;
-  filter: blur(5px);
+  filter: blur(0px);
+  animation: blurIn 500ms ease-in-out forwards;
 }
 
 @media (max-width: 1180px) {
@@ -149,5 +150,15 @@
   to {
     opacity: 1;
     transform: translateY(0px);
+  }
+}
+
+@keyframes blurIn {
+  from {
+    filter: blur(0px);
+  }
+
+  to {
+    filter: blur(5px);
   }
 }
