--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -22,16 +22,6 @@
   position: relative;
 }
 
-#hero video {
-  z-index: 5;
-  pointer-events: none;
-  position: absolute;
-  opacity: 0.6;
-  width: var(--video-size);
-  filter: blur(0px);
-  animation: blurIn 1s ease-in-out forwards;
-}
-
 #hero div {
   display: flex;
   flex-direction: column;
@@ -50,6 +40,17 @@
   transform: translateY(100px);
   font-weight: lighter;
   font-family: var(--font-coolvetica-reg);
+}
+
+#hero button {
+  color: white;
+  border: solid white 3px;
+  border-radius: 50px;
+  font-size: clamp(15px, 2vw, 20px);
+  padding: clamp(10px, 2vw, 15px) clamp(25px, 4vw, 50px);
+  z-index: 999;
+  opacity: 0;
+  animation: textIn 1s 500ms ease-in-out forwards;
 }
 
 @media (min-width: 1000px) {
@@ -72,6 +73,33 @@
   }
 }
 
+@media (max-height: 600px) {
+  #hero {
+    height: 100dvh;
+    padding: 20px;
+  }
+
+  #hero div, #hero h1 {
+    font-size: clamp(70px, 20vh, 150px);
+    line-height: clamp(20px, 15vh, 150px) !important;
+  }
+
+  #hero button {
+    padding: 10px 25px;
+    font-size: 20px;
+  }
+}
+
+#hero video {
+  z-index: 5;
+  pointer-events: none;
+  position: absolute;
+  opacity: 0.6;
+  width: var(--video-size);
+  filter: blur(0px);
+  animation: blurIn 1s ease-in-out forwards;
+}
+
 #hero div h1:nth-of-type(1) {
   animation: textIn 1s ease-in-out forwards;
 }
@@ -79,17 +107,6 @@
   animation: textIn 1s 250ms ease-in-out forwards;
 }
 #hero div h1:nth-of-type(3) {
-  animation: textIn 1s 500ms ease-in-out forwards;
-}
-
-#hero button {
-  color: white;
-  border: solid white 3px;
-  border-radius: 50px;
-  font-size: 23px;
-  padding: 15px 50px;
-  z-index: 999;
-  opacity: 0;
   animation: textIn 1s 500ms ease-in-out forwards;
 }
 
